--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 body{
     font-size:1em;
 }
+
+#container{
+    width:1024px;
+     margin: 0 auto; 
+}
+
+#header, #footer{
+    float:left;
+    width:100%;
+}
+
+#left, #center, #right{
+    float:left;
+    width:33%;
+}
+
